feat(button): add size, shape and color customization to button
BREAKING CHANGE: Convert monolithic button styles to multiple class names

Previously, `k-button` held all the styling information related to
the button component. Now, styles are split in multiple class names
with each being scoped to a single button appearance property:

* `shape` controls if the button is square or not;
* `size` controls the overall physical size of a button;
* `themeColor` controls which color is used to style a button;
* `fillMode` controls how the color is applied;
* `rounded` controls what border radius is applied to a button.

Each property generates component specific class name `k-button-square`,
`k-button-{size}`, `k-button-{fillMode}`, `k-button-{fillMode}-{themeColor}`.

Note: without `fillMode`, there is no way to apply themeColor, that's why
the `themeColor` class is composite.

The only notable exception is rounded, which sets the same class name
for all components -- `k-rounded-{rounded}`.

You can find more information about the values of each property in the
documentation of the button component -- /docs/components/button.

BREAKING CHANGE: Remove residual button styles

No further customization is applied to buttons when hosted inside other
components, except in very few specific cases.

For instance, in Material theme we would slightly dim the normal buttons
and remove the shadow, which may or may not be desired.

BREAKING CHANGE: Add kendo prefix to all button variables

Change variable names from `$button-*` to `$kendo-button-*`.

--- a/packages/material/scss/action-buttons/_layout.scss
+++ b/packages/material/scss/action-buttons/_layout.scss
@@ -3,7 +3,21 @@
 @include exports("action-buttons/layout/material") {
 
     .k-actions {
+
+        // Button
         .k-button {
+            @include box-shadow( none );
+        }
+
+
+        // Button group
+        .k-button-group {
+            @include box-shadow( none );
+        }
+
+
+        // Split button
+        .k-split-button {
             @include box-shadow( none );
         }
     }
