--- a/packages/default/scss/filter/_layout.scss
+++ b/packages/default/scss/filter/_layout.scss
@@ -47,10 +47,9 @@
             .k-toolbar {
                 border-style: solid;
             }
-
-            .k-filter-operator .k-dropdown {
-                width: $filter-operator-dropdown-width;
-            }
+        }
+        .k-filter-operator .k-dropdown-list {
+            width: $filter-operator-dropdown-width;
         }
 
         .k-filter-item {
