feat(dropdown-tree): add size, shape and color customization to dropdown tree
BREAKING CHANGE: Use high-level picker for dropdown tree base

Dropdown tree reuses the picker base component size, rounded and fill
component options.

--- a/packages/bootstrap/scss/dropdowntree/_variables.scss
+++ b/packages/bootstrap/scss/dropdowntree/_variables.scss
@@ -1,5 +1,3 @@
 // Dropdowntree
-$dropdowntree-popup-spacer-x: $padding-x !default;
-$dropdowntree-popup-spacer-y: $dropdowntree-popup-spacer-x !default;
-$dropdowntree-filter-shadow: none !default;
-$dropdowntree-filter-spacer: 0px !default;
+$dropdowntree-popup-padding-x: map-get( $spacing, 2 ) !default;
+$dropdowntree-popup-padding-y: map-get( $spacing, 2 ) !default;
