--- a/packages/default/scss/appbar/_layout.scss
+++ b/packages/default/scss/appbar/_layout.scss
@@ -63,7 +63,7 @@
         .k-picker {
             width: 10em;
         }
-        .k-colorpicker {
+        .k-color-picker {
             width: min-content;
         }
 
