feat(color-picker): add size, shape and color customization to color picker
BREAKING CHANGE: Use high-level picker for color picker base

Color picker reuses the picker base component size, rounded and fill
component options.

--- a/packages/default/scss/popup/_layout.scss
+++ b/packages/default/scss/popup/_layout.scss
@@ -14,10 +14,6 @@
         flex-direction: column;
         align-items: stretch;
 
-        > .k-widget {
-            border-width: 0;
-        }
-
         .k-item {
             outline: none;
         }
@@ -45,6 +41,12 @@
     // Flush popup
     .k-popup.k-popup-flush {
         padding: 0;
+    }
+
+    // Child components
+    .k-popup > .k-widget,
+    .k-popup > .k-coloreditor {
+        border-width: 0;
     }
 }
 
