feat(menu): add size customization to menu list and menu items
BREAKING CHANGE: Convert monolithic menu styles to multiple class names

--- a/packages/default/scss/common/_base.scss
+++ b/packages/default/scss/common/_base.scss
@@ -127,6 +127,7 @@
 
         // Nested disabled
         [disabled],
+        .k-disabled,
         .k-state-disabled {
             opacity: 1;
             filter: grayscale(0);
