--- a/packages/default/scss/menu/_variables.scss
+++ b/packages/default/scss/menu/_variables.scss
@@ -65,7 +65,7 @@ $kendo-menu-popup-border-width: $popup-border-width !default;
 $kendo-menu-popup-font-size: $font-size-md !default;
 $kendo-menu-popup-font-size-sm: $font-size-md !default;
 $kendo-menu-popup-font-size-md: $font-size-md !default;
-$kendo-menu-popup-font-size-lg: $font-size-lg !default;
+$kendo-menu-popup-font-size-lg: $font-size-md !default;
 
 /// Line heights used along with $font-size.
 /// @group menu
@@ -110,6 +110,18 @@ $kendo-menu-popup-item-padding-end: calc( #{$kendo-menu-popup-item-padding-x * 2
 $kendo-menu-popup-item-padding-end-sm: calc( #{$kendo-menu-popup-item-padding-x-sm * 2} + #{$icon-size} ) !default;
 $kendo-menu-popup-item-padding-end-md: calc( #{$kendo-menu-popup-item-padding-x-md * 2} + #{$icon-size} ) !default;
 $kendo-menu-popup-item-padding-end-lg: calc( #{$kendo-menu-popup-item-padding-x-lg * 2} + #{$icon-size} ) !default;
+
+/// The start margin of the menu item expand icon.
+/// @group menu-popup-item
+$kendo-menu-popup-item-icon-margin-start-sm: $kendo-menu-popup-item-padding-x-sm !default;
+$kendo-menu-popup-item-icon-margin-start: $kendo-menu-popup-item-padding-x-md !default;
+$kendo-menu-popup-item-icon-margin-start-lg: $kendo-menu-popup-item-padding-x-lg !default;
+
+/// The end margin of the menu item expand icon.
+/// @group menu-popup-item
+$kendo-menu-popup-item-icon-margin-end-sm: calc( -1 * (#{$kendo-menu-popup-item-padding-end-sm} - #{$kendo-menu-popup-item-padding-x-sm / 2}) ) !default;
+$kendo-menu-popup-item-icon-margin-end: calc( -1 * (#{$kendo-menu-popup-item-padding-end-md} - #{$kendo-menu-popup-item-padding-x-md / 2}) ) !default;
+$kendo-menu-popup-item-icon-margin-end-lg: calc( -1 * (#{$kendo-menu-popup-item-padding-end-lg} - #{$kendo-menu-popup-item-padding-x-lg / 2}) ) !default;
 
 /// The spacing between the menu items in popup.
 /// @group menu
