--- a/packages/default/scss/toolbar/_theme.scss
+++ b/packages/default/scss/toolbar/_theme.scss
@@ -30,27 +30,33 @@
 
             // Hover state
             &:hover,
-            &.k-state-hover {
-                color: $list-item-hovered-text;
-                background: $list-item-hovered-bg;
+            &.k-hover {
+                color: $kendo-menu-popup-item-hover-text;
+                background: $kendo-menu-popup-item-hover-bg;
+            }
+
+            // Button focus state
+            &:focus,
+            &.k-focus {
+                box-shadow: $kendo-menu-popup-item-focus-shadow;
             }
 
             // Active state
             &:active,
-            &.k-state-active {
-                color: $list-item-selected-text;
-                background: $list-item-selected-bg;
+            &.k-active {
+                color: $kendo-menu-popup-item-hover-text;
+                background: $kendo-menu-popup-item-hover-bg;
             }
 
-            // Button focus state
-            .k-button:focus,
-            .k-button.k-state-focused {
-                box-shadow: $list-item-focused-shadow;
+            // Selected
+            &.k-selected {
+                color: $kendo-menu-popup-item-expanded-text;
+                background: $kendo-menu-popup-item-expanded-bg;
             }
 
             // Disabled state
             &:disabled,
-            &.k-state-disabled {
+            &.k-disabled {
                 color: inherit;
             }
         }
