chore(html): restore menu styles

--- a/packages/default/scss/menu/_variables.scss
+++ b/packages/default/scss/menu/_variables.scss
@@ -65,7 +65,7 @@ $kendo-menu-popup-border-width: $popup-border-width !default;
 $kendo-menu-popup-font-size: $font-size-md !default;
 $kendo-menu-popup-font-size-sm: $font-size-md !default;
 $kendo-menu-popup-font-size-md: $font-size-md !default;
-$kendo-menu-popup-font-size-lg: $font-size-lg !default;
+$kendo-menu-popup-font-size-lg: $font-size-md !default;
 
 /// Line heights used along with $font-size.
 /// @group menu
