--- a/packages/default/scss/menu/_layout.scss
+++ b/packages/default/scss/menu/_layout.scss
@@ -1,7 +1,7 @@
 @include exports("menu/layout") {
 
-    // Base
-    .k-menu {
+    // Menu bar
+    .k-menu-bar {
         border-width: $menu-border-width;
         border-style: solid;
         box-sizing: border-box;
@@ -10,18 +10,24 @@
         font-size: $menu-font-size;
         line-height: $menu-line-height;
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         align-items: stretch;
         position: relative;
         cursor: default;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
+    .k-menu { @extend .k-menu-bar !optional; }
 
 
     // Menu item
     .k-menu-item {
-        box-sizing: border-box;
         border-width: 0;
         outline: 0;
         display: flex;
@@ -30,7 +36,6 @@
         position: relative;
         user-select: none;
     }
-
     .k-menu-item-content {
         display: block;
         height: auto;
@@ -110,14 +115,6 @@
             padding-right: $kendo-menu-popup-item-padding-end;
         }
 
-        .k-menu-expand-arrow {
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            right: $icon-spacing;
-        }
-
         > .k-separator {
             margin: $menu-separator-spacing 0;
             height: 0;
@@ -131,37 +128,32 @@
 
     // Menu popup
     .k-menu-popup {
+        padding: $kendo-menu-popup-padding-y $kendo-menu-popup-padding-x;
+        box-sizing: border-box;
         border-width: $kendo-menu-popup-border-width;
         border-style: solid;
         overflow: auto;
         max-height: 80vh;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
 
     // Sub menu
     .k-menu-group {
         margin: 0;
-        padding: $kendo-menu-popup-padding-y $kendo-menu-popup-padding-x;
+        padding: 0;
         list-style: none;
-        display: none;
+        display: flex;
+        flex-flow: column nowrap;
         position: absolute;
-
-        .k-menu-popup & {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-        }
 
         .k-menu-item + .k-menu-item {
             margin-top: $kendo-menu-popup-item-spacing;
-        }
-
-        .k-menu-expand-arrow {
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            right: $icon-spacing;
         }
 
         .k-separator {
@@ -173,6 +165,10 @@
             display: block;
         }
     }
+    .k-menu-popup .k-menu-group {
+        position: relative;
+    }
+
 
     // Sizes
     .k-menu-group-sm {
