fix(menu): set focus styles to menu items via keyboard navigation

--- a/packages/default/scss/menu/_theme.scss
+++ b/packages/default/scss/menu/_theme.scss
@@ -81,8 +81,13 @@
                 );
             }
 
-            &:focus,
             &.k-focus {
+                @include box-shadow( $kendo-menu-popup-item-focus-shadow );
+            }
+        }
+
+        .k-item {
+            &:focus {
                 @include box-shadow( $kendo-menu-popup-item-focus-shadow );
             }
         }
