fix(slider): classic slider should be 56 pixels wide

--- a/packages/default/scss/switch/_layout.scss
+++ b/packages/default/scss/switch/_layout.scss
@@ -11,7 +11,7 @@
         vertical-align: middle;
         font-family: $switch-font-family;
         font-size: $switch-font-size;
-        line-height: $switch-line-height;
+        line-height: 1;
         user-select: none;
         text-align: left;
         -webkit-touch-callout: none;
