--- a/packages/default/scss/textarea/_layout.scss
+++ b/packages/default/scss/textarea/_layout.scss
@@ -16,7 +16,7 @@
         // Targets https://github.com/telerik/kendo-react/issues/638.
         box-shadow: none;
         background: none;
-        display: flex;
+        display: inline-flex;
         flex-wrap: nowrap;
         vertical-align: middle;
         position: relative;
