chore: update tests

--- a/tests/visual/src/reference/layout/complex-layout.html
+++ b/tests/visual/src/reference/layout/complex-layout.html
@@ -10,6 +10,7 @@
 
     <style>
         .box {
+            box-sizing: border-box;
             padding: 4px;
             border: 1px solid #cccccc;
             background: #fafafa;
