--- a/tests/visual/src/reference/layout/grid-layout.html
+++ b/tests/visual/src/reference/layout/grid-layout.html
@@ -16,6 +16,7 @@
             grid-template-rows: 1fr 1fr;
         }
         .box {
+            box-sizing: border-box;
             padding: 4px;
             border: 1px solid #cccccc;
             background: #fafafa;
