--- a/tests/visual/src/reference/layout/stack-layout.html
+++ b/tests/visual/src/reference/layout/stack-layout.html
@@ -20,6 +20,7 @@
             height: 150px;
         }
         .box {
+            box-sizing: border-box;
             padding: 4px;
             border: 1px solid #cccccc;
             background: #fafafa;
