--- a/tests/visual/src/reference/layout/hstack.html
+++ b/tests/visual/src/reference/layout/hstack.html
@@ -14,6 +14,7 @@
             outline: 1px dotted;
         }
         .box {
+            box-sizing: border-box;
             padding: 4px;
             border: 1px solid #cccccc;
             background: #fafafa;
