fix(scheduler): scheduler tooltip no data template should not stretch the tooltip

--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -1095,6 +1095,12 @@
             flex-shrink: 0;
             font-size: inherit;
         }
+
+        .k-no-data {
+            height: auto;
+            min-height: auto;
+            color: inherit;
+        }
     }
 
 }
