fix(switch): switch should behave correctly in containers with dir attribute

--- a/packages/default/scss/switch/_layout.scss
+++ b/packages/default/scss/switch/_layout.scss
@@ -94,7 +94,8 @@
 
     // RTL
     .k-rtl .k-switch,
-    .k-switch[dir = "rtl"] {
+    [dir="rtl"] .k-switch,
+    .k-switch[dir="rtl"] {
         &.k-switch-on .k-switch-handle {
             left: $switch-thumb-start-x;
         }
