--- a/packages/default/scss/button/_layout.scss
+++ b/packages/default/scss/button/_layout.scss
@@ -24,6 +24,12 @@
         -webkit-appearance: none;
         position: relative;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         &:disabled,
         &.k-state-disabled {
             @include disabled( $disabled-styling );
