--- a/packages/default/scss/color-preview/_layout.scss
+++ b/packages/default/scss/color-preview/_layout.scss
@@ -11,6 +11,12 @@
         flex-wrap: nowrap;
         position: relative;
         overflow: hidden;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
 
