--- a/packages/default/scss/coloreditor/_layout.scss
+++ b/packages/default/scss/coloreditor/_layout.scss
@@ -14,6 +14,12 @@
         display: inline-flex;
         flex-direction: column;
         align-items: stretch;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
     // Header
