--- a/packages/default/scss/appbar/_layout.scss
+++ b/packages/default/scss/appbar/_layout.scss
@@ -20,9 +20,14 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         > * {
             flex-shrink: 0;
-
         }
 
         // Appbar section
