--- a/packages/default/scss/badge/_layout.scss
+++ b/packages/default/scss/badge/_layout.scss
@@ -17,6 +17,12 @@
         vertical-align: middle;
         overflow: hidden;
         text-overflow: ellipsis;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
     .k-badge > * {
         color: inherit;
