--- a/packages/default/scss/bottom-navigation/_layout.scss
+++ b/packages/default/scss/bottom-navigation/_layout.scss
@@ -20,6 +20,12 @@
         outline: none;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
     .k-bottom-nav-border {
