--- a/packages/default/scss/breadcrumb/_layout.scss
+++ b/packages/default/scss/breadcrumb/_layout.scss
@@ -15,6 +15,12 @@
         flex-direction: row;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
 
