--- a/packages/default/scss/colorpalette/_layout.scss
+++ b/packages/default/scss/colorpalette/_layout.scss
@@ -12,6 +12,12 @@
         position: relative;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
     // Table
