--- a/packages/default/scss/colorpicker/_layout.scss
+++ b/packages/default/scss/colorpicker/_layout.scss
@@ -22,13 +22,18 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         .k-selected-color {
             margin: $button-padding-y;
             width: calc( #{$button-inner-calc-size} - #{$button-padding-y * 2} );
             height: calc( #{$button-inner-calc-size} - #{$button-padding-y * 2} );
             border-width: 1px;
             border-style: solid;
-            box-sizing: border-box;
             background-clip: content-box;
             line-height: 0;
             position: relative;
@@ -48,7 +53,6 @@
             border-width: 0;
             border-style: solid;
             border-color: inherit;
-            box-sizing: border-box;
             font-size: inherit;
             text-align: center;
             flex-direction: column;
@@ -84,7 +88,6 @@
             border-inline-start-width: $picker-select-border-width;
             border-style: solid;
             border-color: transparent;
-            box-sizing: border-box;
             display: flex;
             align-items: center;
             justify-content: center;
