--- a/packages/default/scss/combobox/_layout.scss
+++ b/packages/default/scss/combobox/_layout.scss
@@ -22,6 +22,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
 
         // Input
         .k-input {}
@@ -41,7 +47,6 @@
             border-width: 0;
             border-inline-start-width: $picker-select-border-width;
             border-style: solid;
-            box-sizing: border-box;
             outline: 0;
             display: flex;
             flex-flow: row nowrap;
