--- a/packages/default/scss/dateinput/_layout.scss
+++ b/packages/default/scss/dateinput/_layout.scss
@@ -22,6 +22,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
 
         // Input
         .k-input {}
@@ -46,7 +52,7 @@
         }
         .k-link {
             padding: 0 $picker-select-padding-x;
-            min-width: $icon-size;
+            min-width: $spinner-min-width;
             flex: 1 1 auto;
             display: block;
             overflow: hidden;
