--- a/packages/default/scss/imageeditor/_layout.scss
+++ b/packages/default/scss/imageeditor/_layout.scss
@@ -13,6 +13,12 @@
         line-height: $imageeditor-line-height;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
 
