--- a/packages/default/scss/maskedtextbox/_layout.scss
+++ b/packages/default/scss/maskedtextbox/_layout.scss
@@ -22,6 +22,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
 
         // Input
         .k-input {}
