--- a/packages/default/scss/mediaplayer/_layout.scss
+++ b/packages/default/scss/mediaplayer/_layout.scss
@@ -14,6 +14,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         > iframe {
             width: 100%;
             height: 100%;
