--- a/packages/default/scss/multiselect/_layout.scss
+++ b/packages/default/scss/multiselect/_layout.scss
@@ -19,6 +19,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         .k-loading-hidden {
             visibility: hidden;
         }
