--- a/packages/default/scss/numerictextbox/_layout.scss
+++ b/packages/default/scss/numerictextbox/_layout.scss
@@ -22,6 +22,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
 
         // Input
         .k-input {
@@ -36,7 +42,6 @@
             border-width: 0;
             border-inline-start-width: $picker-select-border-width;
             border-style: solid;
-            box-sizing: border-box;
             outline: 0;
             display: flex;
             flex-direction: column;
@@ -50,7 +55,6 @@
         .k-link {
             padding: 0 $picker-select-padding-x;
             min-width: $spinner-min-width;
-            box-sizing: border-box;
             flex: 1 1 auto;
             display: block;
             overflow: hidden;
