--- a/packages/default/scss/panelbar/_layout.scss
+++ b/packages/default/scss/panelbar/_layout.scss
@@ -16,6 +16,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
 
         // Root
         > .k-item,
