--- a/packages/default/scss/popover/_layout.scss
+++ b/packages/default/scss/popover/_layout.scss
@@ -16,6 +16,12 @@
         z-index: 12000;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
     // Header
