--- a/packages/default/scss/rating/_layout.scss
+++ b/packages/default/scss/rating/_layout.scss
@@ -14,6 +14,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         &.k-state-readonly {
             pointer-events: none;
         }
@@ -22,7 +28,6 @@
     .k-rating-container {
         flex: 0 1 auto;
         position: relative;
-        box-sizing: border-box;
         margin: 0 $rating-container-margin-x;
 
         .k-rating-item {
