--- a/packages/default/scss/slider/_layout.scss
+++ b/packages/default/scss/slider/_layout.scss
@@ -15,6 +15,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         .k-label {
             width: auto;
             font-size: .92em;
@@ -62,7 +68,6 @@
     .k-slider-wrap {
         width: 100%;
         height: 100%;
-        box-sizing: border-box;
         display: flex;
         flex-flow: inherit;
         align-items: inherit;
@@ -360,7 +365,6 @@
         position: absolute;
         text-align: center;
         text-decoration: none;
-        box-sizing: border-box;
         width: $slider-draghandle-size;
         height: $slider-draghandle-size;
 
