--- a/packages/default/scss/switch/_layout.scss
+++ b/packages/default/scss/switch/_layout.scss
@@ -17,6 +17,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         [type="checkbox"] {
             display: none;
         }
@@ -26,11 +32,9 @@
         }
     }
 
-    .k-switch,
-    .k-switch-container,
-    .k-switch-handle {
-        box-sizing: border-box;
-    }
+    // .k-switch,
+    // .k-switch-container,
+    // .k-switch-handle {}
 
 
     // Switch track
