--- a/packages/default/scss/tooltip/_layout.scss
+++ b/packages/default/scss/tooltip/_layout.scss
@@ -20,6 +20,12 @@
         z-index: 12000;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
     }
 
     .k-tooltip-icon {
@@ -58,7 +64,6 @@
         border-width: $tooltip-callout-size;
         border-style: solid;
         border-color: transparent;
-        box-sizing: border-box;
         position: absolute;
         pointer-events: none;
     }
