--- a/packages/default/scss/upload/_layout.scss
+++ b/packages/default/scss/upload/_layout.scss
@@ -13,6 +13,12 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
         .k-upload-button {
             min-width: 7em;
         }
@@ -168,7 +174,6 @@
                 border-style: solid;
                 font-size: ($font-size * .57);
                 text-transform: uppercase;
-                box-sizing: content-box;
                 position: absolute;
                 top: $upload-item-padding-y;
             }
