fix(virtuallist): optionlabel in virtual list scrolls with content

--- a/packages/default/scss/list/_layout.scss
+++ b/packages/default/scss/list/_layout.scss
@@ -153,6 +153,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
+    .k-virtual-list .k-list-optionlabel {
+        position: relative;
+    }
 
 
     // Filter
