--- a/packages/default/scss/timeline/_layout.scss
+++ b/packages/default/scss/timeline/_layout.scss
@@ -13,7 +13,9 @@
 
         *,
         *::before,
-        *::after {
+        *::after,
+        &::before,
+        &::after {
             box-sizing: border-box;
         }
 
